feat(api): :sparkles: enable CORS for frontend integration

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,11 @@
 # Format: postgres://<user>:<password>@<host>:<port>/<database>
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/the_koro_api
 
+# Frontend URL for CORS
+# Format: http://<domain>:<port>
+# Example: http://localhost:3001
+FRONTEND_URL=http://localhost:3001
+
 # App port
 PORT=3000
 
